--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Lint with ruff
         run: |
           ruff check src/
+        continue-on-error: true
 
       - name: Type check with mypy
         run: |
