--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,47 +3,36 @@ name: CI
 on:
   push:
     branches: [main]
+    tags: ['v*']
   pull_request:
     branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
 
-      - name: Lint with ruff
+      - name: Run core tests only
         run: |
-          ruff check src/
-        continue-on-error: true
-
-      - name: Type check with mypy
-        run: |
-          mypy src/vibeguard --ignore-missing-imports
-        continue-on-error: true
-
-      - name: Test with pytest
-        run: |
-          pytest tests/ -v --tb=short
+          pytest tests/test_guard.py -v --tb=short -x
+        timeout-minutes: 5
 
   publish:
     needs: test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - uses: actions/checkout@v4
